<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FoodieAssistant</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="user">username:</string>
    <string name="password">passwords:</string>
    <string name="login">login</string>
    <string name="callNumber">叫号</string>
    <string name="collect_orders">收点菜单</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="nullvalue" />
    <string name="title_activity_third">ThirdActivity</string>
    <string name="order">查看菜单</string>
    <string name="title_activity_fourth">FourthActivity</string>
    <string name="current_number">当前叫的号码：</string>
    <string name="title_activity_fifth">FifthActivity</string>
    <string name="wait_table">等位</string>
    <string name="refresh">刷新</string>

</resources>