<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ThirdActivityLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/app_name"
        android:src="@android:drawable/ic_menu_help" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="50dp"
        android:minHeight="@dimen/textview_min_height"
        android:text="@string/nullvalue"
        android:textSize="@dimen/textview_min_size" />

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/orderButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/order" />

        <Button
            android:id="@+id/callNumber"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/callNumber" />
    </LinearLayout>

</RelativeLayout>