<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ThirdActivityLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:src="@android:drawable/ic_menu_help"
        android:contentDescription="@string/app_name" />

    <Button
        android:id="@+id/callNumber"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:text="@string/callNumber" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="50dp"
        android:text="@string/nullvalue"
        android:minHeight="@dimen/textview_min_height"
        android:textSize="@dimen/textview_min_size" />

</RelativeLayout>