<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ThirdActivityLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal|center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/orderButton"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:text="@string/wait_table"
            android:background="@color/peachpuff"/>

        <Button
            android:id="@+id/callNumber"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:background="@color/pink"
            android:text="@string/refresh" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical|center_horizontal|center"
        android:text="@string/current_number"
        android:textColor="@color/mediumorchid"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@android:drawable/ic_menu_help" />

</RelativeLayout>